# oceanum-run-cli

./: .gitlab-ci.yml  Dockerfile  README.md  modelgen.sh  pyproject.toml  tox.ini
src/oceanum/cli/run/: client.py  main.py  models.py  project.py  route.py  user.py  utils.py
tests/: conftest.py  test_project.py  test_route.py  test_run_cli.py
tests/data/: bad-project.yaml
