[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "oceanum-run-cli"
description = "Command-line for Oceanum.io Run services"
readme = "README.rst"
license = { file = "LICENSE" }
keywords = ["oceanum", "datamesh", "oceanum.io","run","ci/cd"]
authors = [
  { name = "Oceanum Developers", email="developers@oceanum.science" },
]
maintainers = [
  {name = "Oceanum Developers", email = "developers@oceanum.science"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Build Tools",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
  "click",
  "platformdirs",
  "pydantic[email]",
  "python-jsonpath",
  "requests",
  "tabulate",
  "humanize",
  "oceanum >= 0.16.0"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
  "pytest",
  "pytest-cov"
]

[project.urls]
"Homepage" = "https://oceanum.io/"
"Source" = "https://github.com/oceanum-io/oceanum-python"
"Documentation" = "https://oceanum-python.readthedocs.io/en/latest/"
"Tracker" = "https://github.com/oceanum-io/oceanum-python/issues"

[tool.setuptools.dynamic]
version = {attr = "oceanum.cli.run.__version__"}

[tool.setuptools.packages.find]
where = ["src/"]
include = ["oceanum", "oceanum.cli.run"]

[tool.distutils.bdist_wheel]
universal = true
